--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                   </ul>
                 </div>
                 <div class="block-technical-plan__block-image image-list">
-                  <img src="/image/img-opisanie/block-techplan.jpg" alt="block-techplan">
+                  <img src="image/img-opisanie/block-techplan.jpg" alt="block-techplan">
                 </div>
               </div>
             </div>
@@ -413,7 +413,7 @@
                   </ul>
                 </div>
                 <div class="block-act-examination__block-image image-list">
-                  <img src="/image/img-opisanie/block-plan.jpg" alt="block-plan">
+                  <img src="image/img-opisanie/block-plan.jpg" alt="block-plan">
                 </div>
               </div>
             </div>
@@ -466,7 +466,7 @@
                   </ul>
                 </div>
                 <div class="block-lease-agreement__block-image image-list">
-                  <img src="/image/img-opisanie/block-arenda.jpg" alt="block-arenda">
+                  <img src="image/img-opisanie/block-arenda.jpg" alt="block-arenda">
                 </div>
               </div>
             </div>
@@ -565,7 +565,7 @@
                   </ul>
                 </div>
                 <div class="block-technical-description__block-image image-list">
-                  <img src="/image/img-opisanie/block-techopisanie.jpg" alt="block-arenda">
+                  <img src="image/img-opisanie/block-techopisanie.jpg" alt="block-arenda">
                 </div>
               </div>
             </div>
@@ -681,7 +681,7 @@
                   </ul>
                 </div>
                 <div class="block-technical-plan-linear-objects__block-image image-list">
-                  <img src="/image/img-opisanie/block-lineinue-obgecty.jpg" alt="lineinue-obgecty">
+                  <img src="image/img-opisanie/block-lineinue-obgecty.jpg" alt="lineinue-obgecty">
                 </div>
               </div>
             </div>
@@ -735,7 +735,7 @@
                   </div>
                 </div>
                 <div class="block-reconstruction__block-image image-list">
-                  <img src="/image/img-opisanie/block-rekonstrukcuia.jpg" alt="block-rekonstrukcuia">
+                  <img src="image/img-opisanie/block-rekonstrukcuia.jpg" alt="block-rekonstrukcuia">
                 </div>
               </div>
             </div>
@@ -785,7 +785,7 @@
                   </ul>
                 </div>
                 <div class="block-under-construction__block-image image-list">
-                  <img src="/image/img-opisanie/block-nezaverchonnoe-stroitelstvo.jpg"
+                  <img src="image/img-opisanie/block-nezaverchonnoe-stroitelstvo.jpg"
                     alt="nezaverchonnoe-stroitelstvo">
                 </div>
               </div>
@@ -813,7 +813,7 @@
                 <div class="block-choode-us__column">
                   <div class="block-choode-us__column-items">
                     <div class="block-choode-us__column-image">
-                      <img src="/image/icons/rekomendaciua.png" alt="rekomendaciua">
+                      <img src="image/icons/rekomendaciua.png" alt="rekomendaciua">
                     </div>
                     <div class="block-choode-us__column-title">
                       <p>Рекомендации знакомых</p>
@@ -827,7 +827,7 @@
                 <div class="block-choode-us__column">
                   <div class="block-choode-us__column-items">
                     <div class="block-choode-us__column-image">
-                      <img src="/image/icons/individual.png" alt="individual">
+                      <img src="image/icons/individual.png" alt="individual">
                     </div>
                     <div class="block-choode-us__column-title">
                       <p>Индивидуальный подход</p>
@@ -842,7 +842,7 @@
                 <div class="block-choode-us__column">
                   <div class="block-choode-us__column-items">
                     <div class="block-choode-us__column-image">
-                      <img src="/image/icons/konsultacion.png" alt="konsultacion">
+                      <img src="image/icons/konsultacion.png" alt="konsultacion">
                     </div>
                     <div class="block-choode-us__column-title">
                       <p>Бесплатная консультация</p>
