--- a/politics.html
+++ b/politics.html
@@ -404,28 +404,28 @@
                   <ul class="footer__top-column-menu-list">
 
                     <li class="footer__top-column-menu-link">
-                      <a href="#technical-plan">Технический план</a>
+                      <a href="/#technical-plan">Технический план</a>
                     </li>
                     <li class="footer__top-column-menu-link">
-                      <a href="#act-examination">Акт обследования</a>
+                      <a href="/#act-examination">Акт обследования</a>
                     </li>
                     <li class="footer__top-column-menu-link">
-                      <a href="#lease-agreement">Договор аренды</a>
+                      <a href="/#lease-agreement">Договор аренды</a>
                     </li>
                     <li class="footer__top-column-menu-link">
-                      <a href="#plan-explication">Поэтажный план и экспликация</a>
+                      <a href="/#plan-explication">Поэтажный план и экспликация</a>
                     </li>
                     <li class="footer__top-column-menu-link">
-                      <a href="#technical-description">Техническое описание</a>
+                      <a href="/#technical-description">Техническое описание</a>
                     </li>
                     <li class="footer__top-column-menu-link">
-                      <a href="#linear-objects">Линейные объекты</a>
+                      <a href="/#linear-objects">Линейные объекты</a>
                     </li>
                     <li class="footer__top-column-menu-link">
-                      <a href="#reconstruction">Реконструкция</a>
+                      <a href="/#reconstruction">Реконструкция</a>
                     </li>
                     <li class="footer__top-column-menu-link">
-                      <a href="#under-construction">Незавершенное строительство</a>
+                      <a href="/#under-construction">Незавершенное строительство</a>
                     </li>
 
                   </ul>
