--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="header__body">
           <div class="header__body-left">
             <div class="header__logo">
-              <a href="">
+              <a href="index.html">
                 <img class="logo" src="image/Logo.png" alt="logo">
               </a>
 
